--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "19.1.0",
     "react-icons": "^5.5.0",
     "react-native": "0.80.1",
+    "react-native-config": "^1.5.5",
     "react-native-gesture-handler": "^2.27.1",
     "react-native-safe-area-context": "^5.5.1",
     "react-native-screens": "^4.11.1",
